[package]
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
description = "Bindings for exchanging OAuth 2 tokens"
license = "MIT/Apache-2.0"
name = "oauth2"
repository = "https://github.com/alexcrichton/oauth2-rs"
version = "0.2.0"

[build-dependencies]
serde_codegen = "0.8.16"

[dependencies]
curl = "0.3.8"
log = "0.3"
serde = "0.8.16"
serde_json = "0.8.3"
url = "1.0"
